--- a/ES6+/public/index.html
+++ b/ES6+/public/index.html
@@ -3,9 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <title>Webpack</title>
+
+  <style>
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+    }
+
+    img {
+      width: 80px;
+      float: left;
+      margin-right: 10px;
+    }
+
+    li {
+      clear: both;
+      margin-top: 20px;
+    }
+
+    strong {
+      font-size: 20px;
+    }
+
+    p {
+      margin: 5px 0;
+    }
+
+    .nodesc{
+      font-style: italic;
+      opacity: 0.4;
+    }
+
+  </style>
 </head>
 <body>
-    
-  <script src="./bundle.js"></script>
+  <form id="repo-form">
+    <input type="text" name="repository">
+    <button type="submit">Adicionar</button>
+  </form>
+  <ul id="repo-list">
+  </ul>
+
+  <script src="./bundle.js">
+  </script>
 </body>
 </html>
